# backgroud_remover_flask_app

./: .gitignore  app.py  pyproject.toml
script_image/: background_remover.py
templates/: home.html
templates/status/: erro_400.html
