[tool.poetry]
name = "backgroud-remover-flask-app"
version = "0.1.0"
description = ""
authors = ["LucasPires50 <luc_50@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
Flask = "^3.0.0"
llvmlite = "^0.41.0"
numba = "^0.58.0"
rembg = "^2.0.50"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
